# what-you-need

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  type-checking.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: __init__.py  agent.py  config.py  db.py  tools.py
app/agents/: __init__.py  constants.py  guide.py  states.py  supervisor.py
app/agents/guide/: agent.py
app/agents/product_search/: agent.py  constants.py  nodes.py
app/agents/products/: agent.py  constants.py  nodes.py  prompt.py  schemas.py  state.py  tools.py
app/agents/supervisor/: agent.py  prompt.py  schemas.py
app/api/: __init__.py  chat.py  dependencies.py
app/api/routers/: chat.py
app/core/agents/: checkpointer.py  constants.py  states.py
app/core/agents/products/: __init__.py  agent.py  constants.py  nodes.py  prompt.py  schemas.py  state.py  tools.py
app/core/agents/supervisor/: agent.py
app/core/services/: chat.py
app/infra/: db.py  llm.py  tavily.py
docker/initdb/: 01-create-checkpointer.sql
tests/: conftest.py  utils.py
tests/unit/agents/guide/: test_agent.py
tests/unit/agents/products/: test_agent.py  test_nodes.py
tests/unit/agents/supervisor/: test_agent.py
tests/unit/api/: test_chat.py
tests/unit/api/routers/: test_chat.py
tests/unit/core/agents/products/: test_agent.py  test_nodes.py  test_tools.py
tests/unit/core/agents/supervisor/: test_agent.py
tests/unit/core/services/: test_chat.py
