[project]
name = "web-search-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.4.8",
    "langchain[openai]>=1.3.11",
    "langgraph>=1.2.6",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
]

[dependency-groups]
dev = ["taskipy>=1.14.1", "langgraph-cli[inmem]>=0.4.30"]

[tool.ruff.lint]
ignore = [
    "T201",   # Checks for print statements, 
    "COM812", # Checks for the absence of trailing commas.
    "INP001", # Checks for packages that are missing an __init__.py file.
    "D",      # All pydocstyle (D)
    "ANN401", # Checks that function arguments are annotated with a more specific type than Any.
    "ERA001", # Checks for commented-out Python code.
    "A004",   # Shadowing Python Builtin
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"


[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["src", "tests"]
exclude = [
    "**/.venv",
    "**/env",
    "**/.env",
    "**/__pycache__",
    "**/node_modules",
    "**/.*",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]

[tool.taskipy.tasks]
main = "uv run --env-file=.env main.py"
langsmith = "uv run --env-file=.env langgraph dev --config ./langgraph.json"
