[project]
name = "web-search-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.2",
    "langchain-core>=1.4.8",
    "langchain[openai]>=1.3.10,<1.3.11",    # 1.3.11 imports langgraph.graph.states (plural), not in published langgraph 1.2.6
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "sse-starlette>=3.3.4",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "langgraph-cli[inmem]>=0.4.30",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "anyio>=4.0",
    "pytest-anyio>=0.0.0",
    "pytest-mock>=3.14",
    "ruff>=0.11.11",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.ruff]
line-length = 88
indent-width = 4
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]
ignore = []

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
typeCheckingMode = "strict"
include = ["app", "tests"]
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]
venv = ".venv"
venvPath = "."
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false


[tool.taskipy.tasks]
dev = "uv run --env-file=.env uvicorn app.main:app --reload"
start = "uv run --env-file=.env uvicorn app.main:app --host 0.0.0.0 --port 8000"
lint = "pyright && ruff check"
format = "ruff format"
pre_format = "task lint"
test = "pytest -s -x --cov=app tests/unit -vv"
pre_test = "task lint"
post_test = "coverage html --dir=.htmlcov"
langsmith = "uv run --env-file=.env langgraph dev --config ./langgraph.json"
